--- a/gzpn-spc-csl/src/main/resources/i18n/captions.properties
+++ b/gzpn-spc-csl/src/main/resources/i18n/captions.properties
@@ -2,67 +2,68 @@
 ItemCreatingWindow.addButton.cap   = Save and close
 ItemCreatingWindow.closeButton.cap = Cancel
 
-adminView.ConfirmDialog.deleteGroup.info     = Are you sure want to delete the group?
-adminView.ConfirmDialog.deleteUser.close     = Close
-adminView.ConfirmDialog.deleteUser.info      = Are you sure want to delete the user?
-adminView.ConfirmDialog.deleteUser.ok        = OK
-adminView.button.nameCreateButton            = Create
-adminView.button.nameSaveButton              = Save
-adminView.caption.admin                      = User Administration
-adminView.caption.changedate                 = Change date
-adminView.caption.code                       = Code
-adminView.caption.createdate                 = Create date
-adminView.caption.delete                     = Delete
-adminView.caption.edit                       = Edit
-adminView.caption.editGroupUser              = Groups
-adminView.caption.editInfoUser               = Info
-adminView.caption.email                      = Email
-adminView.caption.firstName                  = First name
-adminView.caption.groupKey                   = Group
-adminView.caption.groupsKey                  = Groups
-adminView.caption.hp                         = Heavy project
-adminView.caption.id                         = ID
-adminView.caption.lastName                   = Last name
-adminView.caption.login                      = Login
-adminView.caption.milestone                  = Milestone
-adminView.caption.name                       = Name
-adminView.caption.newPasswordCaption         = New password
-adminView.caption.passwordCaption            = Password
-adminView.caption.phase                      = Phase
-adminView.caption.project                    = Project \u0420ermissions
-adminView.caption.stage                      = Stage
-adminView.caption.type                       = Type
-adminView.caption.userKey                    = User
-adminView.caption.usersKey                   = Users
-adminView.caption.version                    = Version
-adminView.caption.view                       = View
-adminView.necessary.group.id                 = ID cannot be empty
-adminView.necessary.group.name               = Name cannot be empty
-adminView.necessary.group.type               = Type cannot be empty
-adminView.necessary.user.email               = Email cannot be empty
-adminView.necessary.user.emailValid          = Not a valid email address
-adminView.necessary.user.firstName           = First name cannot be empty
-adminView.necessary.user.lastName            = Last name cannot be empty
-adminView.necessary.user.login               = Login cannot be empty
-adminView.necessary.user.password            = Password cannot be empty
-adminView.necessary.user.passwordValid       = Password must be at least 7 characters long
-adminView.notification.group.change          = Group {0} is changed!
-adminView.notification.group.created         = Group {0} is created!
-adminView.notification.group.deleted         = Group {0} is deleted!
-adminView.notification.group.deletedFromUser = Group {0} from user {1} deleted!
-adminView.notification.user.addGroup         = Group {0} added to user {1} !
-adminView.notification.user.addGroupErr      = Group {0} not added to user {1} !
-adminView.notification.user.change           = User {0} is changed!
-adminView.notification.user.created          = User {0} is created!
-adminView.notification.user.deleted          = User {0} is deleted!
-adminView.notification.user.saveErr          = Person {0} could not be saved, please check error
-adminView.placeholder.searchfield            = Search..
-adminView.project.combobox.capital           = Capital projects
-adminView.project.combobox.heavy             = Heavy projects
-adminView.project.notification.addGroupErr   = Group {0} not added to project id {1} !
-adminView.project.notification.addGroupMes   = Group {0} added to project id {1} !
-adminView.project.notification.delGroupErr   = Group {0} not deleted from project id {1} !
-adminView.project.notification.delGroupMes   = Group {0} deleted from project id {1} !
+adminView.ConfirmDialog.deleteGroup.info      = Are you sure want to delete the group?
+adminView.ConfirmDialog.deleteUser.close      = Close
+adminView.ConfirmDialog.deleteUser.info       = Are you sure want to delete the user?
+adminView.ConfirmDialog.deleteUser.ok         = OK
+adminView.button.nameCreateButton             = Create
+adminView.button.nameSaveButton               = Save
+adminView.caption.admin                       = User Administration
+adminView.caption.changedate                  = Change date
+adminView.caption.code                        = Code
+adminView.caption.createdate                  = Create date
+adminView.caption.delete                      = Delete
+adminView.caption.edit                        = Edit
+adminView.caption.editGroupUser               = Groups
+adminView.caption.editInfoUser                = Info
+adminView.caption.email                       = Email
+adminView.caption.firstName                   = First name
+adminView.caption.groupKey                    = Group
+adminView.caption.groupsKey                   = Groups
+adminView.caption.hp                          = Heavy project
+adminView.caption.id                          = ID
+adminView.caption.lastName                    = Last name
+adminView.caption.login                       = Login
+adminView.caption.milestone                   = Milestone
+adminView.caption.name                        = Name
+adminView.caption.newPasswordCaption          = New password
+adminView.caption.passwordCaption             = Password
+adminView.caption.phase                       = Phase
+adminView.caption.project                     = Project \u0420ermissions
+adminView.caption.stage                       = Stage
+adminView.caption.type                        = Type
+adminView.caption.userKey                     = User
+adminView.caption.usersKey                    = Users
+adminView.caption.version                     = Version
+adminView.caption.view                        = View
+adminView.necessary.group.id                  = ID cannot be empty
+adminView.necessary.group.name                = Name cannot be empty
+adminView.necessary.group.type                = Type cannot be empty
+adminView.necessary.user.email                = Email cannot be empty
+adminView.necessary.user.emailValid           = Not a valid email address
+adminView.necessary.user.firstName            = First name cannot be empty
+adminView.necessary.user.lastName             = Last name cannot be empty
+adminView.necessary.user.login                = Login cannot be empty
+adminView.necessary.user.password             = Password cannot be empty
+adminView.necessary.user.passwordValid        = Password must be at least 7 characters long
+adminView.notification.group.change           = Group {0} is changed!
+adminView.notification.group.created          = Group {0} is created!
+adminView.notification.group.deleted          = Group {0} is deleted!
+adminView.notification.group.deletedFromUser  = Group {0} from user {1} deleted!
+adminView.notification.user.addGroup          = Group {0} added to user {1} !
+adminView.notification.user.addGroupErr       = Group {0} not added to user {1} !
+adminView.notification.user.change            = User {0} is changed!
+adminView.notification.user.created           = User {0} is created!
+adminView.notification.user.deleted           = User {0} is deleted!
+adminView.notification.user.saveErr           = Person {0} could not be saved, please check error
+adminView.placeholder.searchfield             = Search..
+adminView.project.combobox.capital            = Capital projects
+adminView.project.combobox.heavy              = Heavy projects
+adminView.project.notification.addGroupErr    = Group {0} not added to project id!
+adminView.project.notification.addGroupMes    = Group {0} added to project id {1} !
+adminView.project.notification.addGroupRepeat = Group {0} already added to project id {1} !
+adminView.project.notification.delGroupErr    = Group {0} not deleted from project id {1} !
+adminView.project.notification.delGroupMes    = Group {0} deleted from project id {1} !
 
 createDocSettingsWindow.caption             = Document Creating UI - Settings
 createDocSettingsWindow.projectTree.caption = Grouping settings
